# sq-dsm

./: .Makefile  .dockerignore  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.android  README.md  clippy.toml  example.env
autocrypt/: Cargo.toml  README.md
autocrypt/src/: cert.rs  lib.rs  serialize.rs
buffered-reader/: Cargo.toml  NEWS  README.md
buffered-reader/src/: adapter.rs  decompress.rs  decompress_bzip2.rs  decompress_deflate.rs  dup.rs  eof.rs  file_error.rs  file_generic.rs  file_unix.rs  generic.rs  lib.rs  limitor.rs  macros.rs  memory.rs  reserve.rs
core/: Cargo.toml
core/src/: lib.rs
ffi/: .gitignore  Cargo.toml  Makefile  sequoia.pc.in
ffi-macros/: Cargo.toml  README.md
ffi-macros/src/: lib.rs  rust2c.rs
ffi/examples/: .gitignore  Makefile  armor.c  configure.c  dump  encrypt-for.c  example  example.c  keyserver  keyserver.c  parser.c  reader.c
ffi/include/: sequoia.h
ffi/src/: core.rs  error.rs  lib.rs  net.rs  openpgp.rs  sequoia.h  store.rs
ffi/tests/: c-tests.rs
guide/: Cargo.toml  build.rs
guide/src/: chapter_00.md  chapter_01.md  chapter_02.md  chapter_03.md  lib.rs
ipc/: Cargo.toml  README.md
ipc/examples/: assuan-client.rs  gpg-agent-client.rs  gpg-agent-decrypt.rs  gpg-agent-sign.rs
ipc/src/: core.rs  gnupg.rs  keybox.rs  keygrip.rs  lib.rs  macros.rs  sexp.rs  tests.rs  trace.rs
ipc/tests/: gpg-agent.rs
net/: Cargo.toml  README.md
net/src/: async.rs  ipc.rs  lib.rs  pks.rs  updates.rs  wkd.rs
net/tests/: hkp.rs
openpgp/: Cargo.toml  NEWS  README.md  build.rs
openpgp-dsm/: .rustfmt.toml  Cargo.toml
openpgp-dsm/src/: der.rs  lib.rs
openpgp-ffi/: Cargo.toml  Makefile  sequoia-openpgp.pc.in
openpgp-ffi/examples/: .gitignore  Makefile  armor.c  decrypt-with.c  encrypt-for.c  example.c  generate-key.c  immutable-reference-demo.c  parser.c  reader-cookie.c  reader.c  sign.c  type-safety-demo.c  use-after-free-demo.c  writer-cookie.c
openpgp-ffi/src/: amalgamation.rs  armor.rs  cert.rs  common.rs  crypto.rs  error.rs  fingerprint.rs  io.rs  key_amalgamation.rs  keyid.rs  lib.rs  packet_pile.rs  parse.rs  policy.rs  revocation_status.rs  serialize.rs  tpk.rs  tsk.rs
openpgp-ffi/tests/: c-tests.rs
openpgp-sdkms/: Cargo.toml
openpgp-sdkms/src/: der.rs  lib.rs
openpgp/benches/: README.md  decrypt_message.rs  decrypt_verify_message.rs  encrypt_message.rs  encrypt_sign_message.rs  generate_cert.rs  parse_cert.rs  run_benchmarks.rs  sign_message.rs  verify_message.rs
openpgp/examples/: decrypt-with.rs  encrypt-for.rs  generate-encrypt-decrypt.rs  generate-sign-verify.rs  notarize.rs  pad.rs  reply-encrypted.rs  sign-detached.rs  sign.rs  statistics.rs  web-of-trust.rs  wrap-literal.rs
openpgp/src/: aead.rs  armor.rs  autocrypt.rs  cert.rs  compressed_data.rs  constants.rs  container.rs  conversions.rs  ctb.rs  ecdh.rs  fingerprint.rs  fmt.rs  hash.rs  id.rs  iter.rs  key.rs  keyhandle.rs  keyid.rs  lib.rs  literal.rs  macros.rs  mdc.rs  message.rs  mpis.rs  one_pass_sig.rs  packet.rs  packet_pile.rs  parse.rs  pkesk.rs  policy.rs  reader.rs  s2k.rs  seal.rs  seip.rs  serialize.rs  signature.rs  skesk.rs  subpacket.rs  subpackets.rs  symmetric.rs  (+8 more)
openpgp/tests/: for-each-artifact.rs
rfc2822/: Cargo.toml  README.md  build.rs
rfc2822/src/: component.rs  grammar.lalrpop  grammar.rs  lexer.rs  lib.rs  macros.rs  roundtrip.rs  strings.rs
sop/: Cargo.toml  Makefile  README.md
sop/src/: cli.rs  dates.rs  errors.rs  main.rs
sq/: Cargo.toml  Makefile  build.rs  make-usage.sh  sq-armor.1  sq-autocrypt-decode.1  sq-autocrypt-encode-sender.1  sq-autocrypt.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-generate.1  sq-key.1  sq-keyring-filter.1  sq-keyring-join.1  sq-keyring-list.1  sq-keyring-merge.1  sq-keyring-split.1  sq-keyring.1  sq-packet-decrypt.1  sq-packet-dump.1  sq-packet-join.1  sq-packet-split.1  sq-packet.1  sq-sign.1  sq-subplot.md  sq-verify.1  sq.1
sq/man-sq/: sq-armor.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-extract-cert.1  sq-key.1  sq.1  (+14 more)
sq/man-sq-autocrypt/: sq-armor.1  sq-autocrypt-decode.1  sq-autocrypt-encode-sender.1  sq-autocrypt.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-extract-cert.1  sq-key-generate.1  sq-key.1  sq-keyring-filter.1  sq-keyring-join.1  sq-keyring-list.1  sq-keyring-merge.1  sq-keyring-split.1  sq-keyring.1  sq-packet-decrypt.1  sq-packet-dump.1  sq-packet-join.1  sq-packet-split.1  sq-packet.1  sq-sign.1  sq-verify.1  sq.1
sq/man-sq-net/: sq-armor.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-extract-cert.1  sq-key-generate.1  sq-key.1  sq-keyring-filter.1  sq-keyring-join.1  sq-keyring-list.1  sq-keyring-merge.1  sq-keyring-split.1  sq-keyring.1  sq-keyserver-get.1  sq-keyserver-send.1  sq-keyserver.1  sq-packet-decrypt.1  sq-packet-dump.1  sq-packet-join.1  sq-packet-split.1  sq-packet.1  sq-sign.1  sq-verify.1  sq-wkd-generate.1  sq-wkd-get.1  sq-wkd-url.1  sq-wkd.1  sq.1
sq/man-sq-net-autocrypt/: sq-armor.1  sq-autocrypt-decode.1  sq-autocrypt-encode-sender.1  sq-autocrypt.1  sq-certify.1  sq-dearmor.1  sq-decrypt.1  sq-encrypt.1  sq-inspect.1  sq-key-adopt.1  sq-key-attest-certifications.1  sq-key-extract-cert.1  sq-key-generate.1  sq-key.1  sq-keyring-filter.1  sq-keyring-join.1  sq-keyring-list.1  sq-keyring-merge.1  sq-keyring-split.1  sq-keyring.1  sq-keyserver-get.1  sq-keyserver-send.1  sq-keyserver.1  sq-packet-decrypt.1  sq-packet-dump.1  sq-packet-join.1  sq-packet-split.1  sq-packet.1  sq-sign.1  sq-verify.1  sq-wkd-generate.1  sq-wkd-get.1  sq-wkd-url.1  sq-wkd.1  sq.1
sqv/: Cargo.toml  Makefile  NEWS  README.md  build.rs  make-usage.sh
store/: Cargo.toml  Makefile  build.rs
tool/: Cargo.toml  Makefile  build.rs  make-usage.sh
(+484 files in other folders)
