[package]
name = "sq-sdkms"
version = "0.1.0"
authors = ["Francisco Vial-Prado <francisco.vialprado@fortanix.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.18"
bit-vec = "0.6.3"
dotenv = "0.15.0"
env_logger = "0.8.3"
hyper = "0.10"
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls" }
log = "0.4.14"
sdkms = "0.2.1"
sequoia-openpgp = "1.1.0"
structopt = "0.3.13"
uuid = "0.7.4"
yasna = { version = "0.3.2", features = ["num-bigint", "bit-vec"] }

[build-dependencies]
bindgen57 = { version = "0.57", package = "bindgen", default-features = false, features = ["runtime"] }
