[workspace]
members = [
    "autocrypt",
    "buffered-reader",
    "guide",
    "ipc",
    "net",
    "openpgp",
    "openpgp-dsm",
    "sq",
]

[profile.release]
debug = true

[patch.crates-io]
# Rust 1.69+ broke ntapi v0.3.x, which doesn't contain proper fix:
# https://github.com/MSxDOS/ntapi/pull/12
ntapi = { git = "https://github.com/MSxDOS/ntapi", rev = "24fc1e47677fc9f6e38e5f154e6011dc9b270da6" }