[package]
name = "buffered-reader"
description = "A super-powered Reader"
version = "0.18.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.rs/buffered-reader"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
bzip2 = { version = "0.3.2", optional = true }
#flate2 = { version = "1.0.1", optional = true }
flate2 = { version = ">= 1.0.1, < 1.0.16", optional = true } # Pinned, see below.
libc = "0.2.33"

# XXX: We need to pin some dependencies to keep our MSRV at 1.34.  If
# you are packaging Sequoia, feel free to drop these pins if your
# compiler is newer.
miniz_oxide = { version = "= 0.3.7" }

[features]
default = ["compression"]

# The compression algorithms.
compression = ["compression-deflate", "compression-bzip2"]
compression-deflate = ["flate2"]
compression-bzip2 = ["bzip2"]
