[package]
name = "sequoia-ffi-macros"
description = "Macros for writing the C API for Sequoia"
version = "0.9.0"
authors = [
    "Juga <juga@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.9.0/sequoia_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "GPL-3.0"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1.0.0"
proc-macro2 = "0.4"
quote = "0.6"
sha2 = "0.8"

[dependencies.syn]
version = "0.15"
features = ["full"]

[lib]
proc-macro = true
