[package]
name = "sequoia-ffi-macros"
description = "Macros for writing the C API for Sequoia"
version = "0.17.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.17.0/sequoia_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1.0.0"
proc-macro2 = "1.0"
quote = "1.0"
sha2 = "0.8"

[dependencies.syn]
version = "1.0"
features = ["full"]

[lib]
proc-macro = true
