[package]
name = "sequoia-ffi"
description = "C API for Sequoia"
version = "0.3.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/sequoia_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "development-tools::ffi",
              "email"]
license = "GPL-3.0"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-ffi-macros = { path = "../ffi-macros" }
sequoia-openpgp = { path = "../openpgp" }
sequoia-core = { path = "../core" }
sequoia-store = { path = "../store" }
sequoia-net = { path = "../net" }
failure = "0.1.2"
lazy_static = "1.0.0"
libc = "0.2.33"
memsec = "0.5.4"
native-tls = "0.2.0"
time = "0.1.40"

[dev-dependencies]
nettle = "4.0"

[lib]
crate-type = ["cdylib", "staticlib"]
