[package]
name = "sequoia-ffi"
description = "C API for Sequoia"
version = "0.12.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.12.0/sequoia_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "development-tools::ffi",
              "email"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-ffi-macros = { path = "../ffi-macros", version = "0.12" }
sequoia-openpgp = { path = "../openpgp", version = "0.12" }
sequoia-core = { path = "../core", version = "0.12" }
sequoia-store = { path = "../store", version = "0.12" }
sequoia-net = { path = "../net", version = "0.12" }
failure = "0.1.2"
lazy_static = "1.0.0"
libc = "0.2.33"
memsec = "0.5.6"
native-tls = "0.2.0"
tokio-core = "0.1"

[dev-dependencies]
filetime = "0.2"

[lib]
crate-type = ["cdylib", "staticlib"]
