[package]
name = "sequoia-ffi"
description = "C API for Sequoia"
version = "0.21.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.21.0/sequoia_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "development-tools::ffi",
              "email"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-ffi-macros = { path = "../ffi-macros", version = "0.21" }
sequoia-openpgp = { path = "../openpgp", version = "0.21", default-features = false }
sequoia-core = { path = "../core", version = "0.21" }
sequoia-store = { path = "../store", version = "0.21", default-features = false }
sequoia-net = { path = "../net", version = "0.21", default-features = false }
anyhow = "1.0.18"
lazy_static = "1.4.0"
libc = "0.2.66"
memsec = { version = ">=0.5", default-features = false }
native-tls = "0.2.0"
tokio = { version = "0.2.19", features = ["rt-core", "io-driver", "io-util", "time"] }

[dev-dependencies]
filetime = "0.2"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["sequoia-openpgp/default", "sequoia-store/default"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]
background-services = ["sequoia-store/background-services"]
