[package]
name = "sequoia-guide"
version = "0.21.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.21.0/guide/"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
build = "build.rs"

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.21" }
anyhow = "1.0.18"
