[package]
name = "sequoia-ipc"
description = "Interprocess communication infrastructure for Sequoia"
version = "0.20.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.20.0/sequoia_ipc"
build = "build.rs"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.20", default-features = false }
sequoia-core = { path = "../core", version = "0.20" }

anyhow = "1"
buffered-reader = { path = "../buffered-reader", version = "0.20", default-features = false }
capnp-rpc = "0.13"
fs2 = "0.4.2"
futures = "0.3"
lalrpop-util = "0.19"
lazy_static = "1.3"
libc = "0.2.33"
memsec = { version = "0.6", default-features = false }
rand = { version = "0.7", default-features = false }
tempfile = "3.0"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-core", "rt-util", "tcp"] }
tokio-util = { version = "0.3", features = ["compat"] }
parity-tokio-ipc = "0.7"
socket2 = "0.3.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", default-features = false, features = ["winsock2"] }
ctor = "0.1"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
clap = "2.32.0"
quickcheck = { version = "0.9", default-features = false }

[features]
default = ["sequoia-openpgp/default"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]
