[package]
name = "sequoia-ipc"
description = "Interprocess communication infrastructure for Sequoia"
version = "0.26.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.25.0/sequoia_ipc"
build = "build.rs"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
license = "LGPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "1.0.0", default-features = false }

anyhow = "1.0.18"
buffered-reader = { path = "../buffered-reader", version = "1.0.0", default-features = false }
capnp-rpc = "0.13"
fs2 = "0.4.2"
futures = "0.3.5"
lalrpop-util = ">=0.17"
lazy_static = "1.4.0"
libc = "0.2.66"
memsec = { version = ">=0.5", default-features = false }
rand = { version = "0.7" }
tempfile = "3.1"
thiserror = "1.0.2"
tokio = { version = "0.2.19", features = ["rt-core", "rt-util", "tcp", "uds", "io-util", "macros"] }
tokio-util = { version = "0.3", features = ["compat"] }
socket2 = "0.3.16"
dirs = "2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", default-features = false, features = ["winsock2"] }
ctor = "0.1"

[build-dependencies]
lalrpop = ">=0.17"

[dev-dependencies]
clap = "2.33"
quickcheck = { version = "0.9", default-features = false }

[lib]
bench = false

[features]
default = ["sequoia-openpgp/default"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]
