[package]
name = "sequoia-net"
description = "Network services for OpenPGP"
version = "0.9.0"
authors = [
    "Juga <juga@sequoia-pgp.org>",
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.9.0/sequoia_net"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "hkp", "keyserver"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-3.0"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "0.9", default-features = false }
sequoia-core = { path = "../core", version = "0.9" }
sequoia-rfc2822 = { path = "../rfc2822", version = "0.9" }

failure = "0.1.2"
futures = "0.1"
http = "0.1.5"
hyper = "0.12"
hyper-tls = "0.3"
libc = "0.2.33"
native-tls = "0.2.0"
nettle = "5.0"
percent-encoding = "1.0.1"
tokio-core = "0.1"
tokio-io = "0.1.4"
url = "2.1"
zbase32 = "0.1.2"

[dev-dependencies]
rand = { version = "0.6", default-features = false }

[features]
default = ["compression"]

# The compression algorithms.
compression = ["compression-deflate", "compression-bzip2"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]

