[package]
name = "sequoia-net"
description = "Network services for OpenPGP"
version = "0.23.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.rs/sequoia-net"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "hkp", "keyserver"]
categories = ["cryptography", "authentication", "email"]
license = "LGPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-openpgp = { path = "../openpgp", version = "1", default-features = false }

anyhow = "1.0.18"
futures-util = "0.3.5"
http = "0.2"
hyper = { version = "0.14.10", features = [ "http1", "http2" ] }
hyper-tls = "0.5"
libc = "0.2.66"
native-tls = "0.2.0"
percent-encoding = "2.1"
tempfile = "3.1"
thiserror = "1.0.2"
url = "2.1"
zbase32 = "0.1.2"
tokio = { version = "1.13.1", features = [ "macros" ] }
base64 = ">=0.12"

[dev-dependencies]
rand = { version = "0.7", default-features = false, features = [ "getrandom" ] }
hyper = { features = [ "server" ] }

[lib]
bench = false

[features]
default = ["sequoia-openpgp/default"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]

