[package]
name = "openpgp-dsm"
version = "1.0.3"
authors = ["zugzwang <francisco.vialprado@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.18"
bit-vec = "0.6.3"
hyper = "0.10"
hyper-native-tls = "0.3.0"
ipnetwork = "0.17"
http = "0.2.4"
log = "0.4.14"
num = "0.4.0"
rpassword = "5.0"
spki = "0.4.0"
sequoia-openpgp = { path = "../openpgp", default-features = false }
sdkms = { git = "https://github.com/zugzwang/sdkms-client-rust.git", branch = "keylinks" }
semver = "1.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "0.7.4"
yasna = { version = "0.5.0", features = ["num-bigint", "bit-vec"] }

[features]
default = ["sequoia-openpgp/default"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]

[build-dependencies]
lalrpop = ">=0.17"
# See https://github.com/rust-lang/rust-bindgen/issues/2030
bindgen57 = { version = "0.57", package = "bindgen", default-features = false, features = ["runtime"] }
