[package]
name = "sequoia-openpgp-ffi"
description = "C API for Sequoia's low-level OpenPGP crate"
version = "0.11.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.11.0/sequoia_openpgp_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "development-tools::ffi",
              "email"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-ffi-macros = { path = "../ffi-macros", version = "0.11" }
sequoia-openpgp = { path = "../openpgp", version = "0.11" }
failure = "0.1.2"
lazy_static = "1.0.0"
libc = "0.2.33"
memsec = "0.5.6"
nettle = "5.0"
time = "0.1.40"

[dev-dependencies]
filetime = "0.2"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
