[package]
name = "sequoia-openpgp-ffi"
description = "C API for Sequoia's low-level OpenPGP crate"
version = "0.20.0"
authors = [
    "Justus Winter <justus@sequoia-pgp.org>",
    "Kai Michaelis <kai@sequoia-pgp.org>",
    "Neal H. Walfield <neal@sequoia-pgp.org>",
]
documentation = "https://docs.sequoia-pgp.org/0.20.0/sequoia_openpgp_ffi"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia"
readme = "../README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "development-tools::ffi",
              "email"]
license = "GPL-2.0-or-later"
edition = "2018"

[badges]
gitlab = { repository = "sequoia-pgp/sequoia" }
maintenance = { status = "actively-developed" }

[dependencies]
sequoia-ffi-macros = { path = "../ffi-macros", version = "0.20" }
sequoia-openpgp = { path = "../openpgp", version = "0.20", default-features = false }
anyhow = "1"
lazy_static = "1.0.0"
libc = "0.2.33"
memsec = { version = "0.6", default-features = false }

[dev-dependencies]
filetime = "0.2"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["sequoia-openpgp/default"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
compression = ["sequoia-openpgp/compression"]
compression-deflate = ["sequoia-openpgp/compression-deflate"]
compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]
