[package]
name = "openpgp-sdkms"
version = "0.1.0"
authors = ["zugzwang <francisco.vialprado@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.18"
bit-vec = "0.6.3"
hyper = "0.10"
hyper-native-tls = "0.3.0"
ipnetwork = "0.17"
http = "0.2.4"
log = "0.4.14"
spki = "0.4.0"
sequoia-openpgp = { path = "../openpgp" }
sdkms = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "0.7.4"
yasna = { version = "0.3.2", features = ["num-bigint", "bit-vec"] }

[build-dependencies]
lalrpop = ">=0.17"
# See https://github.com/rust-lang/rust-bindgen/issues/2030
bindgen57 = { version = "0.57", package = "bindgen", default-features = false, features = ["runtime"] }
